--- a/AI-Hack-Frontend/package.json
+++ b/AI-Hack-Frontend/package.json
@@ -21,12 +21,15 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "markdown-it": "^14.1.0",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
