--- a/AI-Hack-Frontend/package.json
+++ b/AI-Hack-Frontend/package.json
@@ -14,15 +14,15 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
-    "@react-three/drei": "^9.112.0",
-    "@react-three/fiber": "^8.17.6",
-    "@react-three/postprocessing": "^2.16.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "markdown-it": "^14.1.0",
     "notistack": "^3.0.1",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
