--- a/AI-Hack-Data/app/services/requirements.txt
+++ b/AI-Hack-Data/app/services/requirements.txt
@@ -1,6 +1,6 @@
-import os  # Модуль для работы с операционной системой и файловой системой
-Pillow==10.4.0  # Модуль для работы с изображениями
-pdf2image==1.17.0 import convert_from_path  # Модуль для конвертации PDF в изображения
-pdfplumber==0.10.3  # Модуль для распознавания текста на изображениях (OCR)
-pytesseract==0.3.10  # Модуль для работы с PDF-файлами
+import os  
+Pillow==10.4.0  
+pdf2image==1.17.0 
+pdfplumber==0.10.3 
+pytesseract==0.3.10  
 requests==2.32.3
